# usm-t

./: .gitignore  MANUAL.md  README.md  TODO.txt  env_setup.sh
input/AndChain/design/: AndChain_top.v
input/arb2/faulty_traces/: fault_0.vcd  fault_3.csv  fault_5.csv  fault_7.vcd
input/date2025_synthetic_case_study/expected/: specifications.txt
input/syntetic/design/: spec0.v  test.v
input/syntetic/expected/: specifications.txt
input/synthetic_case_study_1/design_with_assertion/: gmon.out  run.sh  sf.gtkw  test.csv  test.v  test.vcd  test_bench.v  transcript
miners/: usmt_default_config.xml
miners/tools/: run_docker_container.sh
scripts/: addMiner.sh  clearRuns.sh  downloadMiners.sh  generatebenchmarks.sh  setupEnvironment.sh
scripts/run_tcad2026_experiments/: run_case_study.sh  run_scalability_of_evaluators.sh  run_scalability_of_synthetic_generators.sh
tests/: AndChain_synthetic.xml  arb.xml  arb2.xml  arb2_numeric.xml  date2025.xml  synthetic_case_study_1.xml
tests/tcad2026_case_studies/: And_synthetic.xml  Eventually_synthetic.xml  Next_synthetic.xml
tool/: CMakeLists.txt
tool/cmake/: FindBOOST1_83.cmake  FindZ3.cmake  PostInstall.cmake
tool/doc/: doxygen.cfg
tool/src/: main.cc
tool/src/exp/: CMakeLists.txt
tool/src/miner/modules/: CMakeLists.txt
tool/src/miner/modules/include/traceReader/interface/: TraceReader.hh
tool/src/miner/modules/include/traceReader/vcdTraceReader/: VCDtraceReader.hh
tool/src/miner/modules/src/traceReader/csvTraceReader/: CSVtraceReader.cc
tool/src/miner/modules/src/traceReader/vcdTraceReader/: VCDtraceReader.cc
tool/src/miner/utils/: CMakeLists.txt
tool/src/miner/utils/include/: Automaton.hh  Evaluator.hh  Trace.hh  VarDeclaration.hh
tool/src/miner/utils/src/: Assertion.cc  AutomataBasedEvaluator.cc  Automaton.cc  Evaluator.cc  Trace.cc  minerUtils.cc
tool/src/opal/: CMakeLists.txt
tool/src/paal/: CMakeLists.txt
tool/src/similarity_standalone/: CMakeLists.txt
tool/src/similarity_standalone/src/: similarity_standalone.cc
tool/src/usm-t/: CMakeLists.txt
tool/src/usm-t/testReader/: CMakeLists.txt
tool/src/usm-t/testReader/src/: test_reader.cc
tool/syntetic_gen/: README.md  config_gen.xml  gen.py  setup_env.sh
tool/syntetic_gen/hif_sim/: CMakeLists.txt  syntetic_design.ddt.a2t.hif.xml  syntetic_design.ddt.a2t.muffin.hif.xml  syntetic_design.ddt.hif.xml  syntetic_design.hif.xml
tool/syntetic_gen/hif_sim/components/: CMakeLists.txt  generateCSV.sh  run_hifsuite.sh
tool/synthetic_gen/: .gitignore  README.md  TODO.md  config_gen.xml  gen.py  generateTest.sh  generate_from_ltl.py  run_syntgen.sh  unrealizable_config_gen.xml
tool/synthetic_gen/USMTtestgen/: run_testgen.sh  testgen.sh
tool/synthetic_gen/challengeGenerators/: README.md  generate_And.sh  generate_AndChain.sh  generate_AndChainOvl.sh  generate_AndUntil.sh  generate_AndUntilOvl.sh  generate_And_Results.sh  generate_Eventually.sh  generate_EventuallyOvl.sh  generate_Eventually_Results.sh  generate_Next.sh  generate_NextAnd.sh  generate_NextAndChain.sh  generate_NextAndChainOvl.sh  generate_NextAnd_Results.sh  generate_NextChain.sh  generate_NextChainOvl.sh  generate_Next_Results.sh  generate_NonTemporal.sh  generate_Until.sh  generate_Until_Results.sh  generate_sample_challenge.sh
tool/synthetic_gen/gen_out/: sample_synthetic.xml
tool/synthetic_gen/generate_from_ltl/: example_run.sh  generate_from_ltl.py  globals.py  hif_utils.py
tool/synthetic_gen/hif_sim/: synthetic_design.ddt.a2t.hif.xml  synthetic_design.ddt.a2t.muffin.hif.xml  synthetic_design.ddt.hif.xml  synthetic_design.hif.xml
tool/synthetic_gen/miningChallengesGenerator/: generate_AndChain.sh  generate_AndUntilOvl.sh  generate_Eventually.sh  generate_NextAndChainOvl.sh  generate_NextChain.sh  generate_NonTemporal.sh  generate_sample_challenge.sh  run_testgen.sh
tool/synthetic_gen/scalabilityTests/: generate_And_Results.sh  generate_Eventually_Results.sh  generate_NextAnd_Results.sh  generate_Next_Results.sh  generate_Until_Results.sh
tool/synthetic_gen/src/: dir_utils.py  generate_from_ltl.py  globals.py  hif_utils.py  rtl_utils.py
tool/synthetic_gen/tcad2026_synth_gen_scalability_tests/: increasing_complexity.sh  increasing_depth.sh  increasing_overlap.sh  increasing_specs.sh
tool/synthetic_gen/temp/: spec0.aiger  spec1.aiger  spec1.v  spec2.aiger  spec3.aiger  spec3.v  spec4.aiger  spec5.aiger  top_module.v  (+1 more)
tool/tests/: CMakeLists.txt  all_methods_test.cc  edit_distance_scalabilityTests.cc  fault_coverage_scalabilityTests.cc  flattening_scalabilityTests.cc  hybrid_similarity_scalabilityTests.cc  ltlfTests.cc  parserTests.cc  semantic_equivalence_scalabilityTests.cc  simplification_scalabilityTests.cc  strong_weakTests.cc  syntactic_similarity_scalabilityTests.cc  traceTests.cc
tool/tests/input/: GarbageSpecifications.txt
(+2620 files in other folders)
